@@ -29,6 +29,7 @@ Changes in Release 1.0.9
 * closed MYFACES-97 in Jira
 * closed MYFACES-98 in Jira
 * closed MYFACES-109 in Jira
+* closed MYFACES-112 in Jira
 ----------------------------------------------------------------------
 Changes in Release 1.0.8 beta_RC2
 * added a new RenderKit, that renders WML. Thanks to Jiri Zaloudek for his contribution
